--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bulma": "^0.9.0",
     "i18next": "^19.7.0",
+    "i18next-http-backend": "^1.0.18",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
